--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "svelte-dnd-action": "^0.9.67"
   },
   "devDependencies": {
+    "@rollup/rollup-darwin-arm64": "4.53.3",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tauri-apps/cli": "^2.1.0",
+    "@tauri-apps/cli-darwin-arm64": "2.9.5",
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "^5.16.0",
     "typescript": "^5.7.2",
